nav and overflow fix

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -12,3 +12,6 @@ button {
 .coin-pages button {
   margin: 2px;
 }
+.scroll {
+  overflow-x: scroll;
+}
