--- a/src/css/coinRow.css
+++ b/src/css/coinRow.css
@@ -1,5 +1,7 @@
 .container {
   margin: auto;
+  background-color: white;
+  width: 90%;
 }
 
 .list-items {
