--- a/src/css/stickyHeader.css
+++ b/src/css/stickyHeader.css
@@ -1,8 +1,10 @@
 .stickyTop {
   position: sticky;
   top: 0;
-  background-color: black;
-  color: white;
+  background-color: #fffff0;
+  color: black;
+  width: 90%;
+  margin: auto;
 }
 
 .flex-container {
